Dev (#36)
* fisrt endpoints in swagger

* IDs fixed

* Inicializando Entidades

* Modificando_repo

* borre carpeta que estaba mal

* correccion de archivo dev

* Update swagger.yaml

swagger corrections

* Correciones en el repo

* application.yaml data.sql

* fixed id_customer field in address table

* mocked sql data

* Update swagger.yaml

changed type of document number

* get customers_ repositorios

* get customers_ repositorios_modificado

* refactor

* refactoring

* refactoring2

* refactoring 3

* more fixes

* "General fixes"

* Deleted inner project folder

* Get busqueda de type y Number completo!!!

* Get busqueda de Id Customer y id Address completo!!!

* Delete Id Customer completo!!!

* Delete Id Customer completo!!!

* Delete Id Customer completo!!!

* ResponseMappers done and implemented

* Request Customer y Service completo!!!

* Exceptions

* RequestMapper

* GlobalController

* ResponseMappers done and implemented

* tests done

* fixed comments in PR

* Update data.sql

* modificaciones de Demo

* data.sql

* connected to GCP DB

* Delete Customer

* Fixing bugs (#34)

* Dev (#32)

* fisrt endpoints in swagger

* IDs fixed

* Inicializando Entidades

* Modificando_repo

* borre carpeta que estaba mal

* correccion de archivo dev

* Update swagger.yaml

swagger corrections

* Correciones en el repo

* application.yaml data.sql

* fixed id_customer field in address table

* mocked sql data

* Update swagger.yaml

changed type of document number

* get customers_ repositorios

* get customers_ repositorios_modificado

* refactor

* refactoring

* refactoring2

* refactoring 3

* more fixes

* "General fixes"

* Deleted inner project folder

* Get busqueda de type y Number completo!!!

* Get busqueda de Id Customer y id Address completo!!!

* Delete Id Customer completo!!!

* Delete Id Customer completo!!!
