# src/main/java/com/example/customer/customerService/Constraints/ValidateDocEnum.java
@@ -1,0 +1,18 @@
+package com.example.customer.customerService.Constraints;
+
+import javax.validation.Constraint;
+import javax.validation.Payload;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Target(ElementType.FIELD)
+@Retention(RetentionPolicy.RUNTIME)
+@Constraint(validatedBy = EnumDocValidator.class)
+public @interface ValidateDocEnum {
+  String message() default "{com.xxx.yyy.ValidateEnum.message}";
+  Class<?>[] groups() default {};
+  Class<? extends Payload>[] payload() default {};
+  Class<? extends Enum<?>> targetClassType();
+}
