# src/main/java/com/example/customer/customerService/Controller/Request/AddressRequest.java
@@ -1,15 +1,20 @@
 package com.example.customer.customerService.Controller.Request;
 
+import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
+import lombok.NoArgsConstructor;
+
 import javax.validation.constraints.NotEmpty;
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Positive;
 import javax.validation.constraints.Size;
+
+@AllArgsConstructor
+@NoArgsConstructor
 @Builder
 @Data
 public class AddressRequest {
-    @Positive(message = "The idCustomer field must be positive")
     @Size(min = 36, max = 50)
     private String idAddress;
     @Size(min=2, max=30)
@@ -22,6 +27,5 @@ public class AddressRequest {
     private Long floor;
     @NotNull
     private String flat;
-    @Positive(message = "The idCustomer field must be positive")
     private String idCustomer;
 }
